<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        ></androidx.appcompat.widget.Toolbar>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Host"
        android:gravity="center"
        ></TextView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:maxLines="1"
        android:text="@string/defaultHost"
        android:id="@+id/host"
        ></EditText>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Port"
            android:gravity="center"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/defaultPort"
            android:id="@+id/port"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="PubTopic"
            android:gravity="center"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/defaultPubTopic"
            android:id="@+id/PubTopic"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="SubTopic"
            android:gravity="center"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/defaultSubTopic"
            android:id="@+id/SubTopic"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="ClientId"
            android:gravity="center"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/defaultClientId"
            android:id="@+id/ClientId"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="username"
            android:gravity="center"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/defaultUserName"
            android:id="@+id/username"
            ></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="password"
            android:gravity="center"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/defaultPassword"
            android:id="@+id/password"
            ></EditText>
    </LinearLayout>
</LinearLayout>