<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/home"
                    android:id="@+id/home"
                    android:layout_gravity="center"
                    ></ImageView>
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/notconnect"
                    android:id="@+id/imageIntent"
                   ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/isNotConnected"
                    android:id="@+id/textIntent"></TextView>
                <androidx.appcompat.widget.SwitchCompat
                    app:trackTint="@color/colorAccent"
                    android:id="@+id/switchConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textOn="@string/connect"
                    android:textOff="@string/disconnect"
                    android:layout_gravity="center"></androidx.appcompat.widget.SwitchCompat>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="光角度:"
            android:gravity="center"
            android:layout_weight="1"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0°"
            android:id="@+id/light"
            android:layout_weight="2"
            android:gravity="center"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PM10:"
            android:gravity="center"
            android:layout_weight="1"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:inputType="number|numberDecimal"
            android:id="@+id/PM"
            android:gravity="center"
            android:layout_weight="2"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="雨量:"
            android:gravity="center"
            android:layout_weight="1"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:inputType="number|numberDecimal"
            android:id="@+id/water"
            android:gravity="center"
            android:layout_weight="2"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|number"
            android:id="@+id/angle"
            android:hint="角度"
            android:maxLines="1"
            android:gravity="center"
            android:layout_weight="8">
        </EditText>
        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="发送"
            android:id="@+id/sendButton"
            android:background="@drawable/send"
            android:gravity="center"
            android:layout_weight="1"
            ></Button>
    </LinearLayout>
</LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
